# pdf-text-extraction

./: .gitattributes  .gitignore  CMakeLists.txt  Config.cmake.in  README.md  icu_code.cmake
.github/workflows/: cmake.yml  create-release-binaries.yml
FreeType/: CMakeLists.txt
LibAesgm/: CMakeLists.txt
LibJpeg/: CMakeLists.txt
LibTiff/: CMakeLists.txt
PDFWriter/: PDFModifiedPage.cpp  PDFParser.cpp
TextExtraction/: CMakeLists.txt  ErrorsAndWarnings.h  TableExtraction.cpp  TableExtraction.h  TextExtraction.cpp  TextExtraction.h  extract-text-cli.cpp
TextExtraction/lib/bidi/: BidiConversion.cpp  BidiConversion.h  ICUInclude.h
TextExtraction/lib/font-translation/: Encoding.cpp  Encoding.h  EncodingAdobeGlyphList.cpp  EncodingAdobeGlyphList.h  EncodingMacExpert.cpp  EncodingMacExpert.h  EncodingMacRoman.cpp  EncodingMacRoman.h  EncodingStandard.cpp  EncodingStandard.h  EncodingSymbol.cpp  EncodingSymbol.h  EncodingWinAnsi.cpp  EncodingWinAnsi.h  FontDecoder.cpp  FontDecoder.h  StandardFontsDimensions.cpp  StandardFontsDimensions.h  Translation.h
TextExtraction/lib/graphic-content-parsing/: ContentGraphicState.h  GraphicContentInterpreter.cpp  GraphicContentInterpreter.h  IGraphicContentInterpreterHandler.h  Path.h  PathElement.h  Resources.h  TextElement.h  TextGraphicState.h
TextExtraction/lib/graphs/: Graph.h  Queue.h  Result.h
TextExtraction/lib/interpreter/: IPDFInterpreterHandler.h  IPDFRecursiveInterpreterHandler.h  PDFInterpreter.cpp  PDFInterpreter.h  PDFRecursiveInterpreter.cpp  PDFRecursiveInterpreter.h
TextExtraction/lib/math/: Transformations.cpp  Transformations.h
TextExtraction/lib/pdf-writer-enhancers/: Bytes.cpp  Bytes.h
TextExtraction/lib/table-composition/: Lines.h  Table.cpp  Table.h  TableComposer.cpp  TableComposer.h
TextExtraction/lib/table-csv-export/: TableCSVExport.cpp  TableCSVExport.h
TextExtraction/lib/table-line-parsing/: ITableLineInterpreterHandler.h  ParsedLinePlacement.h  TableLineInterpreter.cpp  TableLineInterpreter.h
TextExtraction/lib/tables-composition/: Table.h
TextExtraction/lib/text-composition/: TextComposer.cpp  TextComposer.h
TextExtraction/lib/text-parsing/: ITextInterpreterHandler.h  ParsedTextPlacement.h  TextInterpreter.cpp  TextInterpreter.h
TextExtraction/lib/text-placements/: Bytes.cpp  Bytes.h  TPCollectionState.cpp  TPCollectionState.h  TextPlacement.h  TextPlacementsCollector.cpp  TextPlacementsCollector.h  Transformations.cpp  Transformations.h
TextExtraction/tests/: CMakeLists.txt
TextExtraction/tests/Materials/FuzzTests/: id:000001-sig:06-src:000000-op:flip1-pos:147  id:000019-sig:11-src:000000-op:flip1-pos:203  id:000028-sig:11-src:000000-op:flip1-pos:228  id:000070-sig:11-src:000000-op:flip1-pos:526  id:000156-sig:11-src:000000-op:flip1-pos:957
TextExtractionCLI/: CMakeLists.txt  extract-text-cli.cpp
TextExtractionTesting/: CMakeLists.txt
TextExtractionTesting/Materials/FuzzTests/: id:000007-sig:11-src:000000-op:flip1-pos:147  id:000009-sig:11-src:000000-op:flip1-pos:150  id:000015-sig:11-src:000000-op:flip1-pos:192  id:000045-sig:11-src:000000-op:flip1-pos:305  id:000087-sig:11-src:000000-op:flip1-pos:627  id:000097-sig:11-src:000000-op:flip1-pos:636  id:000106-sig:06-src:000000-op:flip1-pos:677  id:000126-sig:11-src:000000-op:flip1-pos:792  id:000137-sig:06-src:000000-op:flip1-pos:875  id:000223-sig:11-src:000000-op:flip1-pos:1757  id_000030-sig_11-src_000000-op_flip1-pos_241  id_000082-sig_06-src_000000-op_flip1-pos_593  id_000085-sig_11-src_000000-op_flip1-pos_621
ZLib/: CMakeLists.txt
windows/vs2019/output/Debug/Win32/: FreeType.lib  LibAesgm.lib
windows/vs2019/output/Debug/x64/: FreeType.lib  LibAesgm.lib
windows/vs2019/output/Release/Win32/: FreeType.lib  LibAesgm.lib
windows/vs2019/output/Release/x64/: FreeType.lib  LibAesgm.lib
